--- a/ChessSystem/ChessSystem/Views/Home/Login.cshtml
+++ b/ChessSystem/ChessSystem/Views/Home/Login.cshtml
@@ -1,42 +1,37 @@
-﻿@model ChessSystem.Users
+﻿@model Users
 
-@{
-    ViewBag.Title = "Login";
-}
+<nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            @Html.ActionLink(Membership.ApplicationName, "Index", "Home", new { @class = "navbar-brand" })
+        </div>
+    </div>
+</nav>
 
-@using (Html.BeginForm("Login", "Home", FormMethod.Post))
-{
-    <fieldset>
-        <legend>Login into application</legend>
+<div class="row login-container">
+    <div class="col-md-4 col-md-offset-4">
+        @using (Html.BeginForm("Login", "Home", FormMethod.Post))
+            {
+            <fieldset>
+                <h3>Login into the application</h3>
 
-        @Html.AntiForgeryToken()
-        @Html.ValidationSummary(true)
+                @Html.AntiForgeryToken()
+                @Html.ValidationSummary(true)
+                
+                <div class="form-group login-form">
+                    @Html.LabelFor(user => user.Login)
+                    @Html.TextBoxFor(user => user.Login, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(user => user.Login)
+                   
+                    @Html.LabelFor(user => user.Password)
+                    @Html.PasswordFor(user => user.Password, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(user => user.Password)
 
-        @if (@ViewBag.Message != null)
-        {
-            <div style="border: 1px solid red">
-                @ViewBag.Message
-            </div>
+                    <div class="text-center">
+                        <input type="submit" value="Login" class="btn btn-primary btn-login" />
+                    </div>
+                </div>
+            </fieldset>
         }
-
-        <table>
-            <tr>
-                <td>@Html.LabelFor(user => user.Login)</td>
-                <td>@Html.TextBoxFor(user => user.Login)</td>
-                <td>@Html.ValidationMessageFor(user => user.Login)</td>
-            </tr>
-            <tr>
-                <td>@Html.LabelFor(user => user.Password)</td>
-                <td>@Html.PasswordFor(user => user.Password)</td>
-                <td>@Html.ValidationMessageFor(user => user.Password)</td>
-            </tr>
-            <tr>
-                <td></td>
-                <td>
-                    <input type="submit" value="Login" />
-                </td>
-                <td></td>
-            </tr>
-        </table>
-    </fieldset>
-}
+    </div>
+</div>
