--- a/ChessSystem/ChessSystem/Views/Home/Login.cshtml
+++ b/ChessSystem/ChessSystem/Views/Home/Login.cshtml
@@ -1,12 +1,6 @@
 ﻿@model Users
 
-<nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            @Html.ActionLink(Membership.ApplicationName, "Index", "Home", new { @class = "navbar-brand" })
-        </div>
-    </div>
-</nav>
+@Html.Partial("_Navbar")
 
 <div class="row login-container">
     <div class="col-md-4 col-md-offset-4">
