--- a/ChessSystem/ChessSystem/Views/Home/Login.cshtml
+++ b/ChessSystem/ChessSystem/Views/Home/Login.cshtml
@@ -1,8 +1,8 @@
-﻿@model Users
+﻿@model ChessSystem.Models.Users
 
 @Html.Partial("_Navbar")
 
-<div class="row login-container">
+<div class="login-container">
     <div class="col-md-4 col-md-offset-4">
         @using (Html.BeginForm("Login", "Home", FormMethod.Post))
             {
