Tournament full view. Sortable tables.

--- a/ChessSystem/ChessSystem/Content/Site.css
+++ b/ChessSystem/ChessSystem/Content/Site.css
@@ -23,6 +23,10 @@ html, body
     margin-top: 20px;
 }
 
+.section-margin-bottom {
+    margin-bottom: 50px;
+}
+
 
 .login-container {
     margin-top: 50px;
