--- a/ChessSystem/ChessSystem/Views/Home/Login.cshtml
+++ b/ChessSystem/ChessSystem/Views/Home/Login.cshtml
@@ -5,7 +5,7 @@
 <div class="login-container">
     <div class="col-md-4 col-md-offset-4">
         @using (Html.BeginForm("Login", "Home", FormMethod.Post))
-            {
+        {
             <fieldset>
                 <h3>Login into the application</h3>
 
@@ -14,11 +14,11 @@
                 
                 <div class="form-group login-form">
                     @Html.LabelFor(user => user.Login)
-                    @Html.TextBoxFor(user => user.Login, new { @class = "form-control" })
+                    @Html.TextBoxFor(user => user.Login, new { @class = "form-control", required="required" })
                     @Html.ValidationMessageFor(user => user.Login)
                    
                     @Html.LabelFor(user => user.Password)
-                    @Html.PasswordFor(user => user.Password, new { @class = "form-control" })
+                    @Html.PasswordFor(user => user.Password, new { @class = "form-control", required = "required" })
                     @Html.ValidationMessageFor(user => user.Password)
 
                     <div class="text-center">
