--- a/ChessSystem/ChessSystem/Views/Home/Login.cshtml
+++ b/ChessSystem/ChessSystem/Views/Home/Login.cshtml
@@ -22,7 +22,7 @@
                     @Html.ValidationMessageFor(user => user.Password)
 
                     <div class="text-center">
-                        <input type="submit" value="Login" class="btn btn-primary btn-login" />
+                        <input type="submit" value="Login" class="btn btn-primary btn-submit" />
                     </div>
                 </div>
             </fieldset>
