--- a/ChessSystem/ChessSystem/Content/Site.css
+++ b/ChessSystem/ChessSystem/Content/Site.css
@@ -27,6 +27,15 @@ html, body
     margin-bottom: 50px;
 }
 
+.btn-submit {
+    margin-top: 40px;
+}
+
+.form-checkbox {
+    width: 18px;
+    height: 18px;
+}
+
 
 .login-container {
     margin-top: 50px;
@@ -34,8 +43,4 @@ html, body
 
 .login-form, .login-form label {
     margin-top: 20px;
-}
-
-.btn-login {
-    margin-top: 40px;
 }
