--- a/ChessSystem/ChessSystem/Views/Tournaments/Tournament.cshtml
+++ b/ChessSystem/ChessSystem/Views/Tournaments/Tournament.cshtml
@@ -1,6 +1,8 @@
 ﻿@model ChessSystem.Models.Tournaments
 
 @{
+    var isUserLoggedIn = Session["UserId"] != null;
+    var userId = isUserLoggedIn ? int.Parse(Session["UserId"].ToString()) : 0;
     var players = ChessSystem.Models.TournamentsHelper.GetTournamentPlayers(Model);
     var games = Model.Games.Where(game => game.TournamentId.HasValue && game.TournamentId.Value == Model.Id).ToArray();
 }
@@ -42,6 +44,26 @@
             </tr>
         </table>
     </div>
+    @if (isUserLoggedIn && userId == Model.OrganizerId)
+    {
+        <div class="col-md-6 text-right">
+            @(Html.ActionLink(
+                "Edit",
+                "Edit",
+                "Tournaments",
+                new { id = Model.Id },
+                new { role="button", @class = "btn btn-primary" }
+            ))
+            @(Html.ActionLink
+            (
+                "Delete",
+                "Delete",
+                "Tournaments",
+                new { id = Model.Id },
+                new { id = "delete-button",role="button", @class = "btn btn-primary" }
+            ))
+        </div>
+    }
 </div>
 
 <div class="col-md-10 col-md-offset-1 section-margin">
@@ -130,3 +152,15 @@
         </tbody>
     </table>
 </div>
+
+
+<script>
+    document.getElementById("delete-button").addEventListener("click", function (e) {
+        e.preventDefault()
+        var response = confirm("Are you sure you want to delete this tournament?");
+
+        if (response == true) {
+            window.location.replace('/Tournaments/Delete/@Model.Id');
+        }
+    });
+</script>
