--- a/ChessSystem/ChessSystem/Content/Site.css
+++ b/ChessSystem/ChessSystem/Content/Site.css
@@ -10,6 +10,10 @@ html, body
 }
 
 
+.center {
+    margin: auto;
+}
+
 .bold {
     font-weight: bold;
 }
@@ -28,6 +32,7 @@ html, body
 }
 
 .btn-submit {
+    display: block !important;
     margin-top: 40px;
 }
 
