--- a/ChessSystem/ChessSystem/Views/Home/Login.cshtml
+++ b/ChessSystem/ChessSystem/Views/Home/Login.cshtml
@@ -21,9 +21,7 @@
                     @Html.PasswordFor(user => user.Password, new { @class = "form-control", required = "required" })
                     @Html.ValidationMessageFor(user => user.Password)
 
-                    <div class="text-center">
-                        <input type="submit" value="Login" class="btn btn-primary btn-submit" />
-                    </div>
+                    <input type="submit" value="Login" class="btn btn-primary btn-submit center" />
                 </div>
             </fieldset>
         }
