--- a/ChessSystem/ChessSystem/Views/Tournaments/Edit.cshtml
+++ b/ChessSystem/ChessSystem/Views/Tournaments/Edit.cshtml
@@ -4,28 +4,28 @@
 
 
 <div class="col-md-10 col-md-offset-1">
-    @using (Html.BeginForm("edit", "Tournaments", FormMethod.Post))
+    @using (Html.BeginForm("Edit", "Tournaments", FormMethod.Post))
     {
         <fieldset>
             <h3>Edit tournament</h3>
             <div class="form-group form col-md-6">
                 @Html.LabelFor(tournament => tournament.Name)
-                @Html.TextBoxFor(tournament => tournament.Name, new { @class = "form-control", required = "required", value = Model.Name })
+                @Html.TextBoxFor(tournament => tournament.Name, new { @class = "form-control", required = "required" })
                 @Html.ValidationMessageFor(tournament => tournament.Name)
 
                 @Html.LabelFor(tournament => tournament.Date)
-                @Html.TextBoxFor(tournament => tournament.Date, new { type = "date", @class = "form-control", value = Model.Date })
+                @Html.TextBoxFor(tournament => tournament.Date, new { type = "date", @class = "form-control" })
                 @Html.ValidationMessageFor(tournament => tournament.Date)
 
                 @Html.LabelFor(tournament => tournament.Place)
-                @Html.TextBoxFor(tournament => tournament.Place, new { @class = "form-control", value = Model.Place })
+                @Html.TextBoxFor(tournament => tournament.Place, new { @class = "form-control" })
                 @Html.ValidationMessageFor(tournament => tournament.Place)
 
                 @Html.LabelFor(tournament => tournament.IsPublic)
-                @Html.CheckBoxFor(tournament => tournament.IsPublic, new { @class = "checkbox form-checkbox", @checked = Model.IsPublic })
+                @Html.CheckBoxFor(tournament => tournament.IsPublic, new { @class = "checkbox form-checkbox" })
 
                 @Html.LabelFor(tournament => tournament.IsFinished)
-                @Html.CheckBoxFor(tournament => tournament.IsFinished, new { @class = "checkbox form-checkbox", @checked = Model.IsFinished })
+                @Html.CheckBoxFor(tournament => tournament.IsFinished, new { @class = "checkbox form-checkbox" })
 
                 <input type="submit" value="Save" class="btn btn-primary btn-submit" />
             </div>
