--- a/ChessSystem/ChessSystem/Views/Tournaments/Tournament.cshtml
+++ b/ChessSystem/ChessSystem/Views/Tournaments/Tournament.cshtml
@@ -60,7 +60,7 @@
                 "Delete",
                 "Tournaments",
                 new { id = Model.Id },
-                new { id = "delete-button",role="button", @class = "btn btn-primary" }
+                new { role="button", @class = "btn btn-primary" }
             ))
         </div>
     }
@@ -152,15 +152,3 @@
         </tbody>
     </table>
 </div>
-
-
-<script>
-    document.getElementById("delete-button").addEventListener("click", function (e) {
-        e.preventDefault()
-        var response = confirm("Are you sure you want to delete this tournament?");
-
-        if (response == true) {
-            window.location.replace('/Tournaments/Delete/@Model.Id');
-        }
-    });
-</script>
