Registration, viewing, editing and deleting user profile.

--- a/ChessSystem/ChessSystem/Views/Players/Player.cshtml
+++ b/ChessSystem/ChessSystem/Views/Players/Player.cshtml
@@ -41,7 +41,7 @@
                 "Delete",
                 "Players",
                 new { id = Model.Id },
-                new { id = "delete-button", role = "button", @class = "btn btn-primary" }
+                new { role = "button", @class = "btn btn-primary" }
             ))
         </div>
     }
